kubernetes/test.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: http2back
  namespace: test
  labels:
    k8s-app: http2back
spec:
  selector:
    matchLabels:
      k8s-app: http2back
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: http2back
    spec:
      containers:
      - name: http2back
        image: docker.io/nmaupu/http2back:0.5
        args:
          - --bind=0.0.0.0
          - --port=8080
          - fs
          - --dest=/tmp
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 50m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP

---
apiVersion: v1
kind: Service
metadata:
  name: http2back
  namespace: test
  labels:
    k8s-app: http2back
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "http2back"
spec:
  selector:
    k8s-app: http2back
  ports:
  - name: http2back
    port: 8080
    protocol: TCP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http2back-ingress
  namespace: test
spec:
  rules:
  - host: http2back.home.fossar.net
    http:
      paths:
      - path: /
        backend:
          serviceName: http2back
          servicePort: 8080
